--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
  <meta charset="UTF-8">
- <title>PastelColor</title>
+ <title>wasureso</title>
  <meta name=""viewport" content="width=device-width, initial-scale=1.0">
  <style>
    body {
@@ -66,8 +66,12 @@
 </head>
 <body>
  <div class="conrtainer">
- <h2>PastelColor</h2>
- <p>優しい雰囲気の短編脱出ゲームです。</p>
+ <h2>wasureso</h2>
+ <p>デベロッパWebサイトです。</p>
+ <p>ゲームに関して、不具合やなバグなどございましたら、ご連絡いただけると幸いです。</p>
+ <p>メールアドレス： wsrs.app@gmail.com</p>
+  
+ <p>プライバシーポリシーはこちら： https://sites.google.com/view/wasureso/privacy-policy</p>
 
 　<div class="footer">
  このページはGitHub Pagesで作成されています。
