--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     h1 {
-      font-size: 36px;
+      font-size: 40px;
       color: #ff9bb3;
       margin-bottom: 10px;
     }
@@ -66,12 +66,12 @@
 </head>
 <body>
  <div class="conrtainer">
- <h2>wasureso</h2>
+ <h1>wasureso</h1>
  <p>デベロッパWebサイトです。</p>
  <p>ゲームに関して、不具合やなバグなどございましたら、ご連絡いただけると幸いです。</p>
  <p>メールアドレス： wsrs.app@gmail.com</p>
   
- <p>プライバシーポリシーはこちら： https://sites.google.com/view/wasureso/privacy-policy</p>
+ <p>プライバシーポリシーはこちら： <a href="https://sites.google.com/view/wasureso/privacy-policy">公式サイトへ<a></p>
 
 　<div class="footer">
  このページはGitHub Pagesで作成されています。
