--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     h1 {
       font-size: 40px;
-      color: #ff9bb3;
+      color: #8ecae6;;
       margin-bottom: 10px;
     }
 
@@ -66,7 +66,7 @@
 </head>
 <body>
  <div class="conrtainer">
- <h2>wasureso</h2>
+ <h1>wasureso</h1>
  <p>デベロッパWebサイトです。</p>
  <p>ゲームに関して、不具合やなバグなどございましたら、ご連絡いただけると幸いです。</p>
  <p>メールアドレス： wsrs.app@gmail.com</p>
