--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
  <div class="conrtainer">
  <h1>wasureso</h1>
  <p>デベロッパWebサイトです。</p>
- <p>ゲームに関して、不具合やなバグなどございましたら、ご連絡いただけると幸いです。</p>
+ <p>ゲームに関して、不具合やバグなどございましたら、ご連絡いただけると幸いです。</p>
  <p>メールアドレス： wsrs.app@gmail.com</p>
   
- <p>プライバシーポリシーはこちら： <a href="https://sites.google.com/view/wasureso/privacy-policy">公式サイトへ<a></p>
+ <p>プライバシーポリシーはこちら： <a href="https://sites.google.com/view/wasureso/privacy-policy">個人サイトへ<a></p>
 
 　<div class="footer">
  このページはGitHub Pagesで作成されています。
